# KeysightDSOX2000

./: LICENSE  README.md  scope.py  scope_fock.py  scopeplot2002.pyw  setup.cfg  setup.py
dsox2024/: __init__.py  dsox2024.py
keysightdsox2000/: __init__.py  keysightdsox2000.py
tests/: test_scope.py
