[metadata]
name = dsox2024-quantop
version = 1.0.0
author = QUANTOP
description = Python interface to the Keysight DSO-X 2024 scope 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quantop-dungeon/DSOX2024
project_urls =
    Bug Tracker = https://github.com/quantop-dungeon/DSOX2024/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src